--- a/app/src/main/res/layout/page_dial.xml
+++ b/app/src/main/res/layout/page_dial.xml
@@ -20,9 +20,9 @@
             android:id="@+id/rv_contact"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/dial_page"
         android:layout_width="wrap_content"
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="30dp"
                 android:background="#ddd"
                 android:textColor="#111"
@@ -70,7 +71,7 @@
                     android:id="@+id/one"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="1"
                     android:textColor="#334"
@@ -80,7 +81,7 @@
                     android:id="@+id/two"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="2"
                     android:textColor="#334"
@@ -90,7 +91,7 @@
                     android:id="@+id/three"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="3"
                     android:textColor="#334"
@@ -105,7 +106,7 @@
                     android:id="@+id/four"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="4"
                     android:textColor="#334"
@@ -115,7 +116,7 @@
                     android:id="@+id/five"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="5"
                     android:textColor="#334"
@@ -125,7 +126,7 @@
                     android:id="@+id/six"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="6"
                     android:textColor="#334"
@@ -140,7 +141,7 @@
                     android:id="@+id/seven"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="7"
                     android:textColor="#334"
@@ -150,7 +151,7 @@
                     android:id="@+id/eight"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="8"
                     android:textColor="#334"
@@ -160,7 +161,7 @@
                     android:id="@+id/nine"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="9"
                     android:textColor="#334"
@@ -175,7 +176,7 @@
                     android:id="@+id/xin"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="*"
                     android:textColor="#334"
@@ -185,7 +186,7 @@
                     android:id="@+id/zero"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="0"
                     android:textColor="#334"
@@ -195,7 +196,7 @@
                     android:id="@+id/jin"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:layout_margin="3dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/button_background"
                     android:text="#"
                     android:textColor="#334"
@@ -240,10 +241,11 @@
         android:id="@+id/fbtn_show_dial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/fbutton_dial"
-        app:backgroundTint="#272636"
-        app:rippleColor="#334"
+        android:layout_gravity="bottom|center_horizontal"
+        android:src="@drawable/button_show_dial"
+        app:fabSize="mini"
+        app:backgroundTint="#fff"
+        app:rippleColor="#aaa"
         android:layout_margin="16dp"
         android:visibility="gone"/>
 </FrameLayout>
