--- a/app/src/main/res/layout/page_message_and_call.xml
+++ b/app/src/main/res/layout/page_message_and_call.xml
@@ -44,21 +44,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="30dp"
-        app:backgroundTint="#313141"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="190dp"
+        app:fabSize="mini"
+        app:backgroundTint="#9d9d9d"
         app:rippleColor="#224"
         android:src="@drawable/fbutton_contact"
+        android:visibility="gone"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="140dp"
+        app:fabSize="mini"
+        app:backgroundTint="#9d9d9d"
+        app:rippleColor="#555"
+        android:src="@drawable/button_write_message"
         android:visibility="gone"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_dial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="25dp"
         android:layout_marginBottom="90dp"
-        app:backgroundTint="#313141"
-        app:rippleColor="#224"
+        app:fabSize="mini"
+        app:backgroundTint="#9d9d9d"
+        app:rippleColor="#555"
         android:src="@drawable/fbutton_dial"
         android:visibility="gone"/>
     <android.support.design.widget.FloatingActionButton
@@ -69,5 +83,4 @@
         android:layout_margin="20dp"
         app:backgroundTint="#fff"
         android:src="@drawable/fbutton_more"/>
-
 </android.support.design.widget.CoordinatorLayout>
